src/behaviourComposition/parser/behaviour/parserBS.java
/* Generated By:JavaCC: Do not edit this line. parserBS.java */
package behaviourComposition.parser.behaviour;
import behaviourComposition.structure.*;
import behaviourComposition.ai.*;
import java.util.*;
import structures.*;
@SuppressWarnings("all")
public class parserBS implements parserBSConstants {
        ArrayList<String> states = new ArrayList<String>();
        Behaviour TS = new Behaviour();
        HashSet <String> setState=new HashSet<String>();
        HashMap <String,Action> actions = new HashMap<String,Action>();
        HashSet <String> setStateFinal=new HashSet<String>();
        String stateInitial=new String();
        HashSet <Transition> transitions = new HashSet<Transition>();
        HashSet <String[]> setAction=new HashSet<String[]>();
        HashMap <Transition,ArrayList<String>> restrictions = new HashMap<Transition,ArrayList<String>>();
        State s,st;

        public Behaviour createTS() throws ParseException, Exception{
                this.start();
                return TS;
        }
        public HashMap<Transition,ArrayList<String>> getGuards(){return restrictions;}

  final public void start() throws ParseException, Exception {
                              Token t1; String strNameTs;
    jj_consume_token(DIG);
    t1 = jj_consume_token(IDENTIFIER);
                         strNameTs=t1.image;
    jj_consume_token(PGA);
    transition();
    jj_consume_token(PGC);
    jj_consume_token(0);
  }

  final public void transition() throws ParseException, Exception {
                                   Token t1,t2,t3; String str1, str2, str3;State s1,s2; Action a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t1 = jj_consume_token(IDENTIFIER);
      jj_consume_token(ARW);
      t2 = jj_consume_token(IDENTIFIER);
         str1=t1.image; str2=t2.image;
      jj_consume_token(PQA);
      jj_consume_token(LABEL);
      jj_consume_token(EQ);
      jj_consume_token(VGT);
      t3 = jj_consume_token(IDENTIFIER);
                                     str3=t3.image;
      jj_consume_token(VGT);
      jj_consume_token(PQC);
                states = new ArrayList<String>();
                guard();
                //setAction.add(new String[]{str1,str2,str3});
                //setState.add(str1);
                //setState.add(str2);
                //add exception handling for duplicate state name

                        if(!actions.containsKey(str3))
                        {
                                Action action = new Action(str3);
                                actions.put(str3,action);
                        }
                        int a1 = TS.getStateNumber(str1);
                        if(a1 <0)
                        {
                                a1 = TS.addState(str1);
                        }

                        int a2 = TS.getStateNumber(str2);
                        if(a2<0)
                        {
                                a2 = TS.addState(str2);
                        }
                        Transition trans = TS.addTransition(a1,a2,actions.get(str3));
                        transitions.add(trans);
                        restrictions.put(trans,states);
      transition();
      break;
    case PQA:
      initialState();
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void guard() throws ParseException {
              Token t;String str;
    jj_consume_token(PQA);
    jj_consume_token(LEGAL);
    jj_consume_token(EQ);
    jj_consume_token(PGA);
    startGuard();
    jj_consume_token(PGC);
    jj_consume_token(PQC);
  }

  final public void startGuard() throws ParseException {
                   Token t;String str;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
                         str=t.image; states.add(str);
      guard1();
      break;
    default:
      jj_la1[1] = jj_gen;

    }
  }

  final public void guard1() throws ParseException {
               Token t;String str;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VR:
      jj_consume_token(VR);
      t = jj_consume_token(IDENTIFIER);
                                 str=t.image; states.add(str);
      guard1();
      break;
    default:
      jj_la1[2] = jj_gen;

    }
  }

  final public void initialState() throws ParseException, Exception {
                                     Token t;String str;
    jj_consume_token(PQA);
    jj_consume_token(IN);
    jj_consume_token(EQ);
    jj_consume_token(PGA);
    t = jj_consume_token(IDENTIFIER);
         str=t.image;
         stateInitial=str;
    jj_consume_token(PGC);
    jj_consume_token(PQC);
    finalState();
  }

  final public void finalState() throws ParseException, Exception {
                                   Token t;String str;
    jj_consume_token(PQA);
    jj_consume_token(FIN);
    jj_consume_token(EQ);
    jj_consume_token(PGA);
    t = jj_consume_token(IDENTIFIER);
         str=t.image;
         setStateFinal.add(str);
    finalState1();
    jj_consume_token(PGC);
                        //TS.addState(factory.createSimpleState(state,isInitial,isFinal));
                        TS.setStartState(TS.getStateNumber(stateInitial));
                        for(String finalstate : setStateFinal)
                        {
                                TS.setFinalState(TS.getStateNumber(finalstate));
                        }
                //}			

    jj_consume_token(PQC);
  }

  final public void finalState1() throws ParseException {
                    Token t;String str;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VR:
      jj_consume_token(VR);
      t = jj_consume_token(IDENTIFIER);
                         str=t.image; setStateFinal.add(str);
      finalState1();
      break;
    default:
      jj_la1[3] = jj_gen;

    }
  }

  /** Generated Token Manager. */
  public parserBSTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x4400,0x400,0x20000,0x20000,};
   }

  /** Constructor with InputStream. */
  public parserBS(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public parserBS(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new parserBSTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public parserBS(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new parserBSTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public parserBS(parserBSTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(parserBSTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[19];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 19; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
